	column function does.

2010-09-27  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (apply_head_properties): Simplify the arrowhead code.

	* src/graph3d.c src/hidden3d.c src/util3d.c src/util3d.h: Provide a
	3D wrapper apply_3dhead_properties() that dummies up an x-axis scale so
	that the 2D routine apply_head_properties() can be shared by 3D code.
	Bug #3074212

2010-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/command.c (replotrequest):  Once we have started to replot, the
	previous data no longer exists. Therefore we must set refresh_ok = 0.

2010-09-23  Ethan A Merritt  <merritt@u.washington.edu>

	* src/axis.c (axis_checked_extend_empty_range):  When extending from
	an empty range, don't invert the axis direction by accident.
	Bug #3074365

2010-09-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (store2d_point):  Allow the use of "with circles" in
	polar coordinate mode.

	* src/plot2d.c (get_data):  The combination of smoothing and variable
	color cannot work in general.  Disable variable color for all smoothed
	curves.  Later we may add back support for the case of lc palette z.
	Bug #3063366

	* src/graphics.c (fill_between):  Fix filled curve clipping error.
	Bug #2963485

2010-09-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (edge_intersect):  If for some reason we fail to find
	find the intersection points of a vector both of whose ends are out of
	range, issue a warning, pick an edge, and continue.
	I can't see any good reason to treat this as a fatal error.
	Bug #2824879

	* docs/gnuplot.doc: Clarify the section on linetypes and linestyles.

2010-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/eval.c src/internal.c src/internal.h docs/gnuplot.doc:
	New function value("X") returns the value of a variable named X.
	A = "foo"
	value("A") returns "foo"
	value(A) returns NaN, because there is no variable named foo
	value(2) returns 2 (numeric expressions have a natural value)